--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -149,6 +149,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Car.cpp" />
     <ClCompile Include="ColorTracker.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="main.cpp" />
@@ -156,6 +157,7 @@
     <ClCompile Include="ObjectTracker.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Car.h" />
     <ClInclude Include="ColorTracker.h" />
     <ClInclude Include="Engine.h" />
     <ClInclude Include="ObjectIsolator.h" />
