--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="Car.cpp" />
     <ClCompile Include="ColorTracker.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="FrameHistory.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ObjectIsolator.cpp" />
     <ClCompile Include="ObjectTracker.cpp" />
@@ -160,8 +161,13 @@
     <ClInclude Include="Car.h" />
     <ClInclude Include="ColorTracker.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="FrameHistory.h" />
     <ClInclude Include="ObjectIsolator.h" />
     <ClInclude Include="ObjectTracker.h" />
+    <ClInclude Include="resource.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Project2.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
